Revert "Update TestListener.java"
This reverts commit 407c7b5662c37f7d2366a58b1b394f23159ba9c6.